--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="row">
       <div class="col-12">
         <div class="row justify-content-evenly">
-          <div class="col-md-10 d-flex card" id="notepads">
+          <div class="col-md-10 d-flex" id="notepads">
             <div class="row">
               <div class="col-6">
                 <!-- Notes list template-->
